--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -376,6 +376,7 @@ set(SRC
   BKE_fcurve_driver.h
   BKE_fluid.h
   BKE_freestyle.h
+  BKE_geometry_cache.h
   BKE_geometry_cache.hh
   BKE_geometry_fields.hh
   BKE_geometry_set.h
