Py API doc: Add some more dependencies versions requirements.
Copied over from the ones for the manual for 2.93.

This is an attempt to fix API doc generation for 2.93 LTS.

--- a/doc/python_api/requirements.txt
+++ b/doc/python_api/requirements.txt
@@ -1,2 +1,12 @@
 Sphinx==3.5.3
+
+# Sphinx dependencies that are important
+Jinja2==2.11.3
+docutils==0.16
+
+# Only needed for building translations.
+sphinx-intl==2.0.1
+
+# Only needed to match the theme used for the official documentation.
+# Without this theme, the default theme will be used.
 sphinx_rtd_theme==0.5.2
