USD export: convert shapekeys to blendshapes.
Added option to export shapekeys as UdsSkel blendshapes.
Implemented a new USDBlendShapeMeshWriter class to export
meshes that have shapekeys defined.  Currently, only relative
shapekeys are converted to blendshapes.  Absolute shapekeys
are exported as deformed meshes.  The current implementation
doesn't handle shapekeys on meshes bound to armatures that are
expored as skinned meshes.

--- a/source/blender/io/usd/CMakeLists.txt
+++ b/source/blender/io/usd/CMakeLists.txt
@@ -87,6 +87,7 @@ set(SRC
 
   intern/usd_writer_abstract.cc
   intern/usd_writer_armature.cc
+  intern/usd_writer_blendshape_mesh.cc
   intern/usd_writer_camera.cc
   intern/usd_writer_curve.cc
   intern/usd_writer_hair.cc
@@ -124,6 +125,7 @@ set(SRC
   
   intern/usd_writer_abstract.h
   intern/usd_writer_armature.h
+  intern/usd_writer_blendshape_mesh.h
   intern/usd_writer_camera.h
   intern/usd_writer_curve.h
   intern/usd_writer_hair.h
