--- a/source/blender/editors/interface/CMakeLists.txt
+++ b/source/blender/editors/interface/CMakeLists.txt
@@ -36,7 +36,7 @@ set(SRC
   eyedroppers/eyedropper_gpencil_color.c
   interface.cc
   interface_align.c
-  interface_anim.c
+  interface_anim.cc
   interface_button_group.c
   interface_context_menu.c
   interface_context_path.cc
@@ -47,8 +47,8 @@ set(SRC
   interface_icons.c
   interface_icons_event.c
   interface_layout.c
-  interface_ops.c
-  interface_panel.c
+  interface_ops.cc
+  interface_panel.cc
   interface_query.cc
   interface_region_color_picker.cc
   interface_region_hud.cc
@@ -64,9 +64,9 @@ set(SRC
   interface_template_attribute_search.cc
   interface_template_list.cc
   interface_template_search_menu.cc
-  interface_template_search_operator.c
+  interface_template_search_operator.cc
   interface_templates.c
-  interface_undo.c
+  interface_undo.cc
   interface_utils.cc
   interface_widgets.c
   resources.c
