Realtime Compositor: Add basic output nodes
This patch implements the following nodes for the realtime compositor:

- Composite node.
- Viewer node.
- Split viewer node.

Differential Revision: https://developer.blender.org/D15226

Reviewed By: Clement Foucault

--- a/source/blender/nodes/composite/CMakeLists.txt
+++ b/source/blender/nodes/composite/CMakeLists.txt
@@ -10,11 +10,13 @@ set(INC
   ../../blenlib
   ../../blentranslation
   ../../depsgraph
+  ../../gpu
   ../../imbuf
   ../../makesdna
   ../../makesrna
   ../../render
   ../../windowmanager
+  ../../compositor/realtime_compositor
   ../../../../intern/guardedalloc
 
   # dna_type_offsets.h
@@ -118,6 +120,10 @@ set(SRC
   node_composite_util.cc
 
   node_composite_util.hh
+)
+
+set(LIB
+  bf_realtime_compositor
 )
 
 if(WITH_IMAGE_OPENEXR)
