Add most bolierplate code & some buttons for Project Settings editor

--- a/source/blender/editors/CMakeLists.txt
+++ b/source/blender/editors/CMakeLists.txt
@@ -37,6 +37,7 @@ if(WITH_BLENDER)
   add_subdirectory(space_nla)
   add_subdirectory(space_node)
   add_subdirectory(space_outliner)
+  add_subdirectory(space_project_settings)
   add_subdirectory(space_script)
   add_subdirectory(space_sequencer)
   add_subdirectory(space_spreadsheet)
