--- a/source/blender/editors/space_api/CMakeLists.txt
+++ b/source/blender/editors/space_api/CMakeLists.txt
@@ -33,6 +33,7 @@ set(LIB
   bf_editor_space_nla
   bf_editor_space_node
   bf_editor_space_outliner
+  bf_editor_space_project_settings
   bf_editor_space_script
   bf_editor_space_sequencer
   bf_editor_space_spreadsheet
