Support changing project name in Project Settings UI + show location
Adds basic access to the active project and its properties to BPY
(`context.project`).

--- a/source/blender/makesrna/intern/CMakeLists.txt
+++ b/source/blender/makesrna/intern/CMakeLists.txt
@@ -20,6 +20,7 @@ set(DEFSRC
   rna_armature.c
   rna_asset.c
   rna_attribute.c
+  rna_blender_project.c
   rna_boid.c
   rna_brush.c
   rna_cachefile.c
