Add UI for setting up project asset libraries
Looks just like the UI for setting up custom asset libraries in the
Preferences. However project asset libraries use paths relative to the
project root directory.

Had to do some changes to project data storage to avoid memory issues.

--- a/source/blender/editors/util/CMakeLists.txt
+++ b/source/blender/editors/util/CMakeLists.txt
@@ -68,6 +68,7 @@ set(SRC
   ../include/ED_paint.h
   ../include/ED_particle.h
   ../include/ED_physics.h
+  ../include/ED_project.h
   ../include/ED_render.h
   ../include/ED_scene.h
   ../include/ED_screen.h
