--- a/source/blender/editors/CMakeLists.txt
+++ b/source/blender/editors/CMakeLists.txt
@@ -21,6 +21,7 @@ if(WITH_BLENDER)
   add_subdirectory(metaball)
   add_subdirectory(object)
   add_subdirectory(physics)
+  add_subdirectory(project)
   add_subdirectory(render)
   add_subdirectory(scene)
   add_subdirectory(sculpt_paint)
