--- a/source/blender/editors/space_api/CMakeLists.txt
+++ b/source/blender/editors/space_api/CMakeLists.txt
@@ -22,6 +22,7 @@ set(SRC
 
 set(LIB
   bf_editor_geometry
+  bf_editor_project
   bf_editor_space_action
   bf_editor_space_buttons
   bf_editor_space_clip
