Set default project name & add default asset library
Default project name will just be the directory name. The default asset
library will be called "Project Library" and point to an `assets/`
directory inside the project root directory.

--- a/source/blender/editors/project/CMakeLists.txt
+++ b/source/blender/editors/project/CMakeLists.txt
@@ -6,6 +6,7 @@ set(INC
   ../include
   ../../blenkernel
   ../../blenlib
+  ../../blentranslation
   ../../makesdna
   ../../makesrna
   ../../windowmanager
@@ -16,6 +17,7 @@ set(INC_SYS
 )
 
 set(SRC
+    project.cc
     project_ops.cc
 )
 
