Cleanup: Move project settings code to own file
Will probably reorganize things even further, but step by step.

--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -83,6 +83,7 @@ set(SRC
   intern/blender.c
   intern/blender_copybuffer.c
   intern/blender_project.cc
+  intern/blender_project_settings.cc
   intern/blender_undo.c
   intern/blender_user_menu.c
   intern/blendfile.c
