Attempt to fix build error on clean builds

--- a/source/blender/editors/space_project_settings/CMakeLists.txt
+++ b/source/blender/editors/space_project_settings/CMakeLists.txt
@@ -29,4 +29,5 @@ set(LIB
 blender_add_lib(bf_editor_space_project_settings "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
 
 # RNA_prototypes.h dna_type_offsets.h
-# add_dependencies(bf_editor_space_project_settings bf_rna)
+ add_dependencies(bf_editor_space_project_settings bf_rna)
+ add_dependencies(bf_editor_space_project_settings bf_dna)
