--- a/source/blender/blenlib/CMakeLists.txt
+++ b/source/blender/blenlib/CMakeLists.txt
@@ -313,7 +313,7 @@ set(SRC
   BLI_sort.h
   BLI_sort.hh
   BLI_sort_utils.h
-  BLI_arc_spline.hh
+  BLI_even_spline.hh
   BLI_span.hh
   BLI_stack.h
   BLI_stack.hh
