sculpt-dev: pre-emptively rename prototype C++ code in sculpt.cc to sculpt_new.cc before merge

--- a/source/blender/editors/sculpt_paint/CMakeLists.txt
+++ b/source/blender/editors/sculpt_paint/CMakeLists.txt
@@ -95,8 +95,8 @@ set(SRC
   sculpt_undo.c
   sculpt_uv.c
 
-  sculpt.cc
-  sculpt.hh
+  sculpt_new.cc
+  sculpt_new.hh
 
   sculpt_brush_machine.c
 
