--- a/source/blender/io/ply/CMakeLists.txt
+++ b/source/blender/io/ply/CMakeLists.txt
@@ -4,6 +4,7 @@ set(INC
   .
   exporter
   importer
+  intern
   ../common
   ../../blenkernel
   ../../blenlib
@@ -47,8 +48,11 @@ blender_add_lib(bf_ply "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
 if (WITH_GTESTS)
   set(TEST_SRC
           tests/io_ply_generic_test.cc
+          tests/io_ply_importer_test.cc
   )
   set(TEST_INC
+    ../../blenloader
+    ../../../../tests/gtests
   )
   set(TEST_LIB
     bf_ply
