Feat: Write header vertex data
Writes the vertex data from plyData into the header

--- a/source/blender/io/ply/CMakeLists.txt
+++ b/source/blender/io/ply/CMakeLists.txt
@@ -28,11 +28,13 @@ set(SRC
     IO_ply.cc
     exporter/ply_export.cc
     importer/ply_import.cc
+    exporter/ply_export_header.cc
 
 
 
     IO_ply.h
     exporter/ply_export.hh
+    exporter/ply_export_header.hh
     exporter/ply_file_buffer_ascii.hh
     exporter/ply_file_buffer_binary.hh
     importer/ply_import.hh
