Feat: Added Binary BE reader to PlyData

--- a/source/blender/io/ply/CMakeLists.txt
+++ b/source/blender/io/ply/CMakeLists.txt
@@ -4,6 +4,7 @@ set(INC
   .
   exporter
   importer
+  intern
   ../common
   ../../blenkernel
   ../../blenlib
@@ -27,12 +28,12 @@ set(SRC
     IO_ply.cc
     exporter/ply_export.cc
     importer/ply_import.cc
-
-
+    importer/ply_import_big_endian.cc
 
     IO_ply.h
     exporter/ply_export.hh
     importer/ply_import.hh
+    importer/ply_import_big_endian.hh
 
     intern/ply_data.hh
 )
