Feat: Refactor loading of plydata to own function/file

--- a/source/blender/io/ply/CMakeLists.txt
+++ b/source/blender/io/ply/CMakeLists.txt
@@ -37,6 +37,7 @@ set(SRC
     exporter/ply_export_header.hh
     exporter/ply_file_buffer_ascii.hh
     exporter/ply_file_buffer_binary.hh
+    exporter/ply_export_load_plydata.hh
     importer/ply_import.hh
 
     intern/ply_data.hh
